@startuml

title __CLIENT's Class Diagram__\n

  namespace clientserver.client {
    class clientserver.client.Client {
        {static} ~ quitMessage : String
        {static} + main()
        {static} - printSocketInfo()
    }
  }
  

  namespace clientserver.client {
    class clientserver.client.ClientStreamSocket {
        - input : BufferedReader
        - out : ObjectOutputStream
        - output : PrintWriter
        - socket : Socket
        + close()
        + receiveMessage()
        + sendDownload()
        + sendLogin()
        + sendLogout()
        + sendMessage()
        ~ ClientStreamSocket()
        ~ ClientStreamSocket()
        - setStreams()
    }
  }
  

  namespace clientserver.client {
    class clientserver.client.EchoClientHelper {
        {static} ~ endMessage : String
        - serverHost : InetAddress
        - serverPort : int
        + done()
        + getDownload()
        + getEcho()
        + getLogin()
        + getLogout()
        ~ EchoClientHelper()
    }
  }
  

  clientserver.client.ClientStreamSocket -up-|> java.net.Socket
  clientserver.client.EchoClientHelper o-- clientserver.client.ClientStreamSocket : mySocket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
